[FIX] Single word overflow on title or desc

--- a/styles/ShoppingListItem.module.css
+++ b/styles/ShoppingListItem.module.css
@@ -30,6 +30,11 @@
     background-color: #e8b3da;
 }
 
+.itemTitle {
+    text-overflow: ellipsis;
+    overflow-x: clip;
+}
+
 .itemImageContainer {
     text-align: center;
 }
@@ -111,4 +116,6 @@
 .descriptionSection {
     margin-block: 1em;
     margin-bottom: 6em;
+    text-overflow: ellipsis;
+    overflow-x: clip;
 }
